SERVER-46758 In-memory FCV value should properly reflect the on-disk FCV after a rollback
(cherry picked from commit aa527109a28bec0b6fe2763fce8a447ead0c02dd)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -134,6 +134,7 @@ env.CppUnitTest(
         'common',
         'op_observer_impl',
         'repl/replmocks',
+        'repl/storage_interface_impl',
         'service_context_d_test_fixture',
     ],
 )
