SERVER-47618 Blacklist tests with requires_getmore from multi_stmt_txn_jscore_passthrough_with_migration
(cherry picked from commit 5a9f6de28db56cde36067a1458fdcf81038d343b)

--- a/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
+++ b/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
@@ -345,6 +345,9 @@ selector:
   - inspects_whether_plan_cache_entry_is_active
   # $out is not supported in transactions
   - uses_$out
+  # Cannot retry a getMore command if a transient transaction or network error occurs during
+  # it, since we won't know whether the cursor was advanced or not.
+  - requires_getmore
 
 executor:
   archive:
