SERVER-38731 Implement ability to specify sync source read preference in initial sync

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -48,6 +48,7 @@ env.Library(
     ],
     source=[
         'read_preference.cpp',
+        env.Idlc('read_preference.idl')[0],
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/bson/util/bson_extract',
