--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -63,6 +63,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/apply_ops_inserts_do_not_include_fromMigrate_field.js
 - ticket: SERVER-47190
   test_file: jstests/replsets/force_shutdown_primary.js
+- ticket: SERVER-47390
+  test_file: jstests/replsets/disallow_adding_initialized_node1.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
