--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -33,6 +33,8 @@ replica_sets_jscore_multiversion_passthrough:
   test_file: jstests/core/txns/new_transaction_waits_for_previous_txn_table_updates.js
 - ticket: SERVER-46196
   test_file: jstests/core/create_collection_fail_cleanup.js
+- ticket: SERVER-47773
+  test_file: jstests/core/geo_near_tailable.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
@@ -77,7 +79,11 @@ sharding_multiversion:
 sharding_jscore_multiversion_passthrough:
 - ticket: SERVER-46196
   test_file: jstests/core/create_collection_fail_cleanup.js
+- ticket: SERVER-47773
+  test_file: jstests/core/geo_near_tailable.js
 
 sharded_collections_jscore_multiversion_passthrough:
 - ticket: SERVER-46196
   test_file: jstests/core/create_collection_fail_cleanup.js
+- ticket: SERVER-47773
+  test_file: jstests/core/geo_near_tailable.js
