SERVER-48054 On startup, upgrade all downgraded unique indexes to the latest format version

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1176,6 +1176,7 @@ env.Library(
         'dbhelpers',
         'repair_database',
         'repl/repl_settings',
+        'storage/downgraded_unique_indexes',
         'storage/storage_repair_observer',
     ],
 )
