SERVER-47931 Retry WriteConflictExceptions when creating a *.system.profile collection
(cherry picked from commit 40c0fa9c0a3cf5d3d2ee16fe301c262946ececa8)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -946,6 +946,9 @@ env.Library(
     LIBDEPS=[
         "db_raii",
     ],
+    LIBDEPS_PRIVATE=[
+       "concurrency/write_conflict_exception",
+    ],
 )
 
 env.Library(
