SERVER-40441 Make arbiters not try to setup the sessions collection or check if it exists in LogicalSessionCache refresh/reap thread
(cherry picked from commit 35c86a14e2ad2ef8d14fe7ea3ea02951f30e646a)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1373,6 +1373,7 @@ env.Library(
     ],
     LIBDEPS_PRIVATE=[
         's/sharding_api_d',
+        '$BUILD_DIR/mongo/db/repl/repl_coordinator_interface'
     ]
 )
 
