--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -136,6 +136,7 @@ selector:
   - jstests/sharding/txn_two_phase_commit_wait_for_majority_commit_after_stepup.js
   - jstests/sharding/txn_commit_optimizations_for_read_only_shards.js
   - jstests/sharding/txn_being_applied_to_secondary_cannot_be_killed.js
+  - jstests/sharding/txn_single_write_shard_failover.js
   - jstests/sharding/txn_with_several_routers.js
   - jstests/sharding/txn_writes_during_movechunk.js
   - jstests/sharding/update_sharded.js
