--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -593,6 +593,7 @@ env.Library(
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/idl/server_parameter',
         'catalog/database_holder',
+        'storage/snapshot_helper',
     ],
 )
 
