--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1155,6 +1155,7 @@ env.Library(
         's/sharding_api_d',
         'stats/serveronly_stats',
         'storage/oplog_hack',
+        'storage/snapshot_helper',
         'storage/storage_options',
         'storage/remove_saver',
         'update/update_driver',
