SERVER-48188 Allow multiversion *_gen tasks to be rerun without fail

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1602,6 +1602,7 @@ functions:
       params:
         target: generate_tasks_config.tgz
         source_dir: src/generated_resmoke_config
+        optional: true
         include:
           - "*"
 
@@ -2053,14 +2054,6 @@ functions:
           ${activate_virtualenv}
           $python buildscripts/evergreen_gen_multiversion_tests.py run --expansion-file expansions.yml
 
-    - command: shell.exec
-      params:
-        working_dir: src
-        script: |
-          set -o errexit
-          set -o verbose
-
-          ${activate_virtualenv}
           $python buildscripts/evergreen_gen_multiversion_tests.py generate-exclude-files --suite=${task_name} --task-path-suffix=${task_path_suffix} --is-generated-suite=true
 
     - command: archive.targz_pack
@@ -2080,9 +2073,13 @@ functions:
         permissions: public-read
         content_type: ${content_type|application/gzip}
         display_name: Generated Task Config - Execution ${execution}
+        optional: true
 
     - command: generate.tasks
       params:
+        # Optional b/c reruns of this task will produce no JSON files to avoid
+        # generate.tasks failing
+        optional: true
         files:
           - src/generated_resmoke_config/*.json
 
