--- a/buildscripts/resmokeconfig/suites/replica_sets_multiversion.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_multiversion.yml
@@ -7,6 +7,7 @@ selector:
   - multiversion_incompatible
   - requires_fcv_44
   exclude_files:
+  - jstests/replsets/invalidate_sessions_on_stepdown.js
 executor:
   config:
     shell_options:
