SERVER-48657: Use evergreen modules for performance signal-processing management
(cherry picked from commit 2f05f86f91359c7cebef7adf97b0ab624893ad00)

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -80,6 +80,7 @@ functions:
         genny: ${genny_rev}
         workloads: ${workloads_rev}
         mongo-tools: ${mongo-tools_rev}
+        signal-processing: ${signal-processing_rev}
 
   "compile mongodb":
     # We create a virtual environment with the Python dependencies for compiling the server
@@ -915,6 +916,11 @@ modules:
   prefix: mongo-tools/src/github.com/mongodb
   branch: master
 
+- name: signal-processing
+  repo: git@github.com:10gen/signal-processing.git
+  prefix: signal_processing
+  branch: master
+
 #######################################
 #         Buildvariants               #
 #######################################
@@ -979,6 +985,7 @@ buildvariants:
     - genny
     - workloads
     - linkbench
+    - signal-processing
   expansions:
     setup: single-replica
     cluster: single
