--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -51,15 +51,22 @@ modules:
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
   branch: v4.2
+
 - name: genny
   repo: git@github.com:mongodb/genny.git
   branch: master
+
 - name: dsi
   repo: git@github.com:10gen/dsi.git
   branch: master
 
 - name: mongo-perf
   repo: git@github.com:mongodb/mongo-perf.git
+  branch: master
+
+- name: signal-processing
+  repo: git@github.com:10gen/signal-processing.git
+  prefix: signal_processing
   branch: master
 
 functions:
@@ -72,6 +79,7 @@ functions:
         genny: ${genny_rev}
         dsi: ${dsi_rev}
         mongo-perf: ${mongo-perf_rev}
+        signal-processing: ${signal-processing_rev}
   "start server":
     - command: s3.get
       params:
@@ -600,6 +608,7 @@ buildvariants:
     - genny
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     # We are explicitly tracking the rhel62 variant compile options from evergreen.yml for
     # microbenchmarks, since they run on the centos6 boxes.  If we can get proper artifacts directly
@@ -650,6 +659,7 @@ buildvariants:
     - genny
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     mongod_exec_wrapper: *exec_wrapper
     perf_exec_wrapper: *perf_wrapper
