--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -48,11 +48,18 @@ modules:
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
   branch: v4.0
+
 - name: dsi
   repo: git@github.com:10gen/dsi.git
   branch: master
+
 - name: mongo-perf
   repo: git@github.com:mongodb/mongo-perf.git
+  branch: master
+
+- name: signal-processing
+  repo: git@github.com:10gen/signal-processing.git
+  prefix: signal_processing
   branch: master
 
 functions:
@@ -64,6 +71,7 @@ functions:
         enterprise: ${enterprise_rev}
         dsi: ${dsi_rev}
         mongo-perf: ${mongo-perf_rev}
+        signal-processing: ${signal-processing_rev}
   "start server":
     - command: s3.get
       params:
@@ -487,6 +495,7 @@ buildvariants:
     - enterprise
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     # We are explicitly tracking the rhel62 variant compile options from evergreen.yml for
     # microbenchmarks, since they run on the centos6 boxes.  If we can get proper artifacts directly
@@ -568,6 +577,7 @@ buildvariants:
   modules:
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     mongod_exec_wrapper: *exec_wrapper
     perf_exec_wrapper: *perf_wrapper
