--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -79,6 +79,7 @@ functions:
         linkbench: ${linkbench_rev}
         workloads: ${workloads_rev}
         wtdevelop: ${wtdevelop_rev}
+        signal-processing: ${signal-processing_rev}
 
   "compile mongodb":
     - command: shell.exec
@@ -701,6 +702,11 @@ modules:
   prefix: src/mongo/db/modules
   branch: v4.0
 
+- name: signal-processing
+  repo: git@github.com:10gen/signal-processing.git
+  prefix: signal_processing
+  branch: master
+
 #######################################
 #         Buildvariants               #
 #######################################
@@ -751,6 +757,7 @@ buildvariants:
     - dsi
     - workloads
     - linkbench
+    - signal-processing
   expansions:
     setup: single-replica
     cluster: single
