SERVER-48614 Fix plan cache discriminators for partial wildcard indexes
Previously, discrimination based on the partial filter
expression was done for all paths included in the wildcard
projection. This could lead to a situation where two queries
were erroneously assigned the same plan cache key.

The fix is to ensure that for wildcard indexes, partial
index discriminators are instead registered only for those
paths mentioned in the partial filter expression. Unlike
other kinds of wildcard index discriminators (e.g. handling
concerns of null equality or collation), the paths in the
partial filter expression are known a priori. Therefore,
discrimination based on the partial filter can be done in
the same way for wildcard and non-wildcard indexes.

(cherry picked from commit 57edf434219c9659354f01fb6bf4f4e6c0370bc4)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -33,6 +33,8 @@ replica_sets_jscore_multiversion_passthrough:
   test_file: jstests/core/profile_find.js
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
@@ -69,7 +71,11 @@ sharding_multiversion:
 sharding_jscore_multiversion_passthrough:
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
 
 sharded_collections_jscore_multiversion_passthrough:
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
