--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -37,6 +37,8 @@ replica_sets_jscore_multiversion_passthrough:
   test_file: jstests/core/create_collection_fail_cleanup.js
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
@@ -83,9 +85,13 @@ sharding_jscore_multiversion_passthrough:
   test_file: jstests/core/create_collection_fail_cleanup.js
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
 
 sharded_collections_jscore_multiversion_passthrough:
 - ticket: SERVER-46196
   test_file: jstests/core/create_collection_fail_cleanup.js
 - ticket: SERVER-47773
   test_file: jstests/core/geo_near_tailable.js
+- ticket: SERVER-48614
+  test_file: jstests/core/wildcard_index_partial_index.js
