SERVER-48657: Use evergreen modules for performance signal-processing management on all perf build variants
(cherry picked from commit d08551e123742e641cc1ad193ec086c0c9b89c80)

--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -528,6 +528,7 @@ buildvariants:
   modules:
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     mongod_exec_wrapper: *exec_wrapper
     perf_exec_wrapper: *perf_wrapper
@@ -598,6 +599,7 @@ buildvariants:
   modules:
     - dsi
     - mongo-perf
+    - signal-processing
   expansions:
     mongod_exec_wrapper: *exec_wrapper
     perf_exec_wrapper: *perf_wrapper
